cli/tests/snapshot/inputs/errors/piecewise_array_merge_fail.ncl
# capture = 'stderr'
# command = ['eval']
{
  a = [1, 2],
  a = [2, 3],
}
